unpackaged/main/default/objects/BSF_Custom_Notification__c/BSF_Custom_Notification__c.object-meta.xml
<CustomObject>
    <description>Object to store custom notifications data to be processed by an asynchronous process.</description>
    <label>BSF Custom Notification</label>
    <nameField>
        <displayFormat>CNN-{0000000000}</displayFormat>
        <label>BSF Custom Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSF Custom Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>