unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Final body text of the notification</description>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>