unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Functional Type of the Notification Being Sent. The Purpose of this to club notifications being sent.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>