unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Custom_Notification_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Notification_Type_Id__c</fullName>
    <description>This field is used by Salesforce push</description>
    <label>Custom Notification Type Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>