unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Destination_Email__c.field-meta.xml
<CustomField>
    <fullName>Destination_Email__c</fullName>
    <description>This field is populated for email notifications</description>
    <label>Destination Email</label>
    <type>Email</type>
</CustomField>