unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>This field is populated for email notifications. This is the id value of email template.</description>
    <label>Email Template</label>
    <length>20</length>
    <type>Text</type>
</CustomField>