unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Notification_Sent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent_Timestamp__c</fullName>
    <description>This field is populated with current date and time when notification was sent</description>
    <label>Notification Sent Timestamp</label>
    <type>DateTime</type>
</CustomField>