unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SalesforcePush</fullName>
            </value>
            <value>
                <fullName>Oneoff</fullName>
            </value>
            <value>
                <fullName>CustomSMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>