unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Oneoff_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Oneoff_Protocol__c</fullName>
    <label>Oneoff Protocol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>