unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority of the Notification of all the records which has the same 
Proposed Time. It should be looked it at a system as a whole. Default value/LOW priority is 10,000 and high priority is 1 , medium is 5000</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>