unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Scheduled_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_TimeStamp__c</fullName>
    <label>Scheduled TimeStamp</label>
    <type>DateTime</type>
</CustomField>