unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <description>This field is populated for email notifications</description>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>