unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/SMS_Country_Code_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>SMS_Country_Code_Abbreviation__c</fullName>
    <label>SMS Country Code Abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>