unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This field is populated for Email and Salesforce Push (Bell) notifications.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>