unpackaged/main/default/objects/BSF_Custom_Notification__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>This field is used by Salesforce push</description>
    <label>Target Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>